/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package org.birddog.model;

/**
 * An accord, usually between two or more Parties
 * @author mlooman
 */
public interface Agreement extends Item {
  
}
