/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package org.birddog.model;

/**
 * Information with an existence independent of any other entity.  For example documents or classifications.
 * @author mlooman
 */
public interface Datum extends Item {
  
}
