/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package org.birddog.model;

/**
 * {@link org.birddog.model.Party} subtype comprised of a number of other Parties, either formally (as in a corporation) or informally as a group.
 * @author mlooman
 */
public interface Organization extends Party {

//<editor-fold desc="Class Definition" defaultstate="collapsed">  
//  private Person organizationManagerPerson;
//  private Organization organizationParentOrganization;
//  private List<Organization> organizationChildOrganizationsList;
//  private String organizationPrimaryLocationDescription;
//  
//  public Organization() {
//  }
//
//  public Organization(Integer itemIdentifier) {
//    super(itemIdentifier);
//  }
//
//  public Organization( Integer itemIdentifier, ItemType itemType, String partyPrimaryUriString, String partyName, String partyAlternativeName, RelationshipType partyCurrentUserRelationshipType, Person organizationManagerPerson, Organization organizationParentOrganization, List<Organization> organizationChildOrganizationsList, String organizationPrimaryLocationDescription) {
//    super(itemIdentifier, itemType, partyPrimaryUriString, partyName, partyAlternativeName, partyCurrentUserRelationshipType);
//    this.organizationManagerPerson = organizationManagerPerson;
//    this.organizationParentOrganization = organizationParentOrganization;
//    this.organizationChildOrganizationsList = organizationChildOrganizationsList;
//    this.organizationPrimaryLocationDescription = organizationPrimaryLocationDescription;
//  }
//
//  public Person getOrganizationManagerPerson() {
//    return organizationManagerPerson;
//  }
//
//  public void setOrganizationManagerPerson(Person organizationManagerPerson) {
//    this.organizationManagerPerson = organizationManagerPerson;
//  }
//
//  public Organization getOrganizationParentOrganization() {
//    return organizationParentOrganization;
//  }
//
//  public void setOrganizationParentOrganization(Organization organizationParentOrganization) {
//    this.organizationParentOrganization = organizationParentOrganization;
//  }
//
//  public List<Organization> getOrganizationChildOrganizationsList() {
//    return organizationChildOrganizationsList;
//  }
//
//  public void setOrganizationChildOrganizationsList(List<Organization> organizationChildOrganizationsList) {
//    this.organizationChildOrganizationsList = organizationChildOrganizationsList;
//  }
//
//  public String getOrganizationPrimaryLocationDescription() {
//    return organizationPrimaryLocationDescription;
//  }
//
//  public void setOrganizationPrimaryLocationDescription(String organizationPrimaryLocationDescription) {
//    this.organizationPrimaryLocationDescription = organizationPrimaryLocationDescription;
//  }
// </editor-fold>
  
}
